# infraguard-agent

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/scripts/: cli.py  screenshot.py
backend/src/infraguard/: __init__.py  agent.py  config.py  drift.py  main.py  routes.py  runner.py  scenarios.py  sse.py  store.py  tools.py
backend/tests/: test_drift.py  test_routes.py  test_scenarios.py  test_store.py  test_tools.py
docs/: architecture.md  aws-setup.md
terraform-lab/: apply-lab.sh
terraform-lab/missing-tags/: main.tf
terraform-lab/public-s3/: main.tf
